// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Packages | List Basic 1`] = `
.c7 {
  display: inline-block;
  vertical-align: middle;
  padding: 0.25rem 0.75rem;
  border-radius: 0.75rem;
  font-size: 0.725rem;
  background-color: #00C3FF;
  color: #ffffff;
}

.c1 {
  list-style: none;
  word-break: break-word;
  word-wrap: break-word;
  overflow: hidden;
  border-radius: 0;
}

.c2 {
  border-radius: 0;
}

.c3 {
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  margin-bottom: -1px;
  padding: 0.75rem 1.3rem;
  font-size: 1.125rem;
  word-break: break-word;
  border: none;
  border-bottom: none;
  border-top: none;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  background: #ffffff;
  color: #456297;
}

.c3:hover {
  background-color: #D8E3F6;
  color: #419FFE;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c10 {
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  margin-bottom: -1px;
  padding: 0.75rem 1.3rem;
  font-size: 1.125rem;
  word-break: break-word;
  border: none;
  border-bottom: none;
  border-top: none;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  padding-left: calc(0.75rem + 16px);
  color: #456297;
  background: #F7F9FE;
}

.c10:hover {
  background-color: #D8E3F6;
  color: #419FFE;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c11 {
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  margin-bottom: -1px;
  padding: 0.75rem 1.3rem;
  font-size: 1.125rem;
  word-break: break-word;
  border: none;
  border-bottom: none;
  border-top: none;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  padding-left: calc(0.75rem + 32px);
  color: #456297;
  background: #EEF2FC;
}

.c11:hover {
  background-color: #D8E3F6;
  color: #419FFE;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c12 {
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  margin-bottom: -1px;
  padding: 0.75rem 1.3rem;
  font-size: 1.125rem;
  word-break: break-word;
  border: none;
  border-bottom: none;
  border-top: none;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  padding-left: calc(0.75rem + 48px);
  color: #456297;
  background: #D8E3F6;
}

.c12:hover {
  background-color: #D8E3F6;
  color: #419FFE;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c13 {
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  margin-bottom: -1px;
  padding: 0.75rem 1.3rem;
  font-size: 1.125rem;
  word-break: break-word;
  border: none;
  border-bottom: none;
  border-top: none;
  padding-left: calc(0.75rem + 64px);
  color: #456297;
  background: #C4D2EB;
}

.c14 {
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  margin-bottom: -1px;
  padding: 0.75rem 1.3rem;
  font-size: 1.125rem;
  word-break: break-word;
  border: none;
  border-bottom: none;
  border-top: none;
  padding-left: calc(0.75rem + 32px);
  color: #456297;
  background: #EEF2FC;
}

.c16 {
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  margin-bottom: -1px;
  padding: 0.75rem 1.3rem;
  font-size: 1.125rem;
  word-break: break-word;
  border: none;
  border-bottom: none;
  border-top: none;
  background: #ffffff;
  color: #456297;
}

.c4 {
  display: table-cell;
  vertical-align: middle;
}

.c8 {
  pointer-events: none;
  color: inherit;
  -webkit-transform: rotateZ(0deg);
  -ms-transform: rotateZ(0deg);
  transform: rotateZ(0deg);
  -webkit-transition: -webkit-transform 0.1s ease-in;
  -webkit-transition: transform 0.1s ease-in;
  transition: transform 0.1s ease-in;
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  will-change: height;
  background-color: #f7f9fd;
  overflow: hidden;
}

.c6 {
  text-align: right;
  padding-right: 20px;
}

.c17 {
  text-align: right;
  padding-right: 0;
}

.c15 {
  display: block;
  font-size: 1.2rem;
  border-left: none;
  border-right: none;
  padding: 0.928rem 2.856rem 0.928rem 1.428rem;
  line-height: 1.866rem;
}

.c0 {
  padding: 20px;
}

<div
  className="c0"
>
  <ul
    className="vital__list c1"
    icon={null}
  >
    <li
      className="vital__ListItem c2"
    >
      <div
        className="vital__ListItem-wrapper c3"
        onClick={[Function]}
      >
        <div
          className="vital__ListItem-title c4"
        >
          Level 1
        </div>
        <div
          className="c5"
        >
          <div
            className="c6 c4"
          >
            <span
              className="vital__badge c7"
            >
              99+
            </span>
          </div>
          <svg
            className="c8 "
            height={10}
            onClick={null}
            open={false}
            viewBox="0 0 1024 1024"
            width={10}
          >
            <path
              d="M961.714 461.714l-424 423.429c-14.286 14.286-37.143 14.286-51.429 0l-424-423.429c-14.286-14.286-14.286-37.714 0-52l94.857-94.286c14.286-14.286 37.143-14.286 51.429 0l303.429 303.429 303.429-303.429c14.286-14.286 37.143-14.286 51.429 0l94.857 94.286c14.286 14.286 14.286 37.714 0 52z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <ul
        className="c9"
      >
        <li
          className="vital__ListItem c2"
        >
          <div
            className="vital__ListItem-wrapper c10"
            onClick={[Function]}
          >
            <div
              className="vital__ListItem-title c4"
            >
              Level 2
            </div>
            <div
              className="c5"
            >
              <svg
                className="c8 "
                height={10}
                onClick={null}
                open={false}
                viewBox="0 0 1024 1024"
                width={10}
              >
                <path
                  d="M961.714 461.714l-424 423.429c-14.286 14.286-37.143 14.286-51.429 0l-424-423.429c-14.286-14.286-14.286-37.714 0-52l94.857-94.286c14.286-14.286 37.143-14.286 51.429 0l303.429 303.429 303.429-303.429c14.286-14.286 37.143-14.286 51.429 0l94.857 94.286c14.286 14.286 14.286 37.714 0 52z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
          <ul
            className="c9"
          >
            <li
              className="vital__ListItem c2"
            >
              <div
                className="vital__ListItem-wrapper c11"
                onClick={[Function]}
              >
                <div
                  className="vital__ListItem-title c4"
                >
                  Level 3
                </div>
                <div
                  className="c5"
                >
                  <svg
                    className="c8 "
                    height={10}
                    onClick={null}
                    open={false}
                    viewBox="0 0 1024 1024"
                    width={10}
                  >
                    <path
                      d="M961.714 461.714l-424 423.429c-14.286 14.286-37.143 14.286-51.429 0l-424-423.429c-14.286-14.286-14.286-37.714 0-52l94.857-94.286c14.286-14.286 37.143-14.286 51.429 0l303.429 303.429 303.429-303.429c14.286-14.286 37.143-14.286 51.429 0l94.857 94.286c14.286 14.286 14.286 37.714 0 52z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
              <ul
                className="c9"
              >
                <li
                  className="vital__ListItem c2"
                >
                  <div
                    className="vital__ListItem-wrapper c12"
                    onClick={[Function]}
                  >
                    <div
                      className="vital__ListItem-title c4"
                    >
                      Level 4
                    </div>
                    <div
                      className="c5"
                    >
                      <svg
                        className="c8 "
                        height={10}
                        onClick={null}
                        open={false}
                        viewBox="0 0 1024 1024"
                        width={10}
                      >
                        <path
                          d="M961.714 461.714l-424 423.429c-14.286 14.286-37.143 14.286-51.429 0l-424-423.429c-14.286-14.286-14.286-37.714 0-52l94.857-94.286c14.286-14.286 37.143-14.286 51.429 0l303.429 303.429 303.429-303.429c14.286-14.286 37.143-14.286 51.429 0l94.857 94.286c14.286 14.286 14.286 37.714 0 52z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                  <ul
                    className="c9"
                  >
                    <li
                      className="vital__ListItem c2"
                    >
                      <div
                        className="vital__ListItem-wrapper c13"
                        onClick={[Function]}
                      >
                        <div
                          className="vital__ListItem-title c4"
                        >
                          Level 5
                        </div>
                        <div
                          className="c5"
                        />
                      </div>
                    </li>
                  </ul>
                </li>
                <li
                  className="vital__ListItem c2"
                >
                  <div
                    className="vital__ListItem-wrapper c12"
                    onClick={[Function]}
                  >
                    <div
                      className="vital__ListItem-title c4"
                    >
                      Level 4
                    </div>
                    <div
                      className="c5"
                    >
                      <svg
                        className="c8 "
                        height={10}
                        onClick={null}
                        open={false}
                        viewBox="0 0 694.8571428571428 1024"
                        width={10}
                      >
                        <path
                          d="M632.571 501.143l-424 424c-14.286 14.286-37.143 14.286-51.429 0l-94.857-94.857c-14.286-14.286-14.286-37.143 0-51.429l303.429-303.429-303.429-303.429c-14.286-14.286-14.286-37.143 0-51.429l94.857-94.857c14.286-14.286 37.143-14.286 51.429 0l424 424c14.286 14.286 14.286 37.143 0 51.429z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </li>
                <li
                  className="vital__ListItem c2"
                >
                  <div
                    className="vital__ListItem-wrapper c12"
                    onClick={[Function]}
                  >
                    <div
                      className="vital__ListItem-title c4"
                    >
                      Level 4 link with badge
                    </div>
                    <div
                      className="c5"
                    >
                      <div
                        className="c6 c4"
                      >
                        <span
                          className="vital__badge c7"
                        >
                          1
                        </span>
                      </div>
                      <svg
                        className="c8 "
                        height={10}
                        onClick={null}
                        open={false}
                        viewBox="0 0 694.8571428571428 1024"
                        width={10}
                      >
                        <path
                          d="M632.571 501.143l-424 424c-14.286 14.286-37.143 14.286-51.429 0l-94.857-94.857c-14.286-14.286-14.286-37.143 0-51.429l303.429-303.429-303.429-303.429c-14.286-14.286-14.286-37.143 0-51.429l94.857-94.857c14.286-14.286 37.143-14.286 51.429 0l424 424c14.286 14.286 14.286 37.143 0 51.429z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </li>
              </ul>
            </li>
            <li
              className="vital__ListItem c2"
            >
              <div
                className="vital__ListItem-wrapper c14"
                onClick={[Function]}
              >
                <div
                  className="vital__ListItem-title c4"
                >
                  Level 3
                </div>
                <div
                  className="c5"
                />
              </div>
            </li>
            <li
              className="vital__ListItem c2"
            >
              <div
                className="vital__ListItem-wrapper c11"
                onClick={[Function]}
              >
                <div
                  className="vital__ListItem-title c4"
                >
                  Level 3 has Content
                </div>
                <div
                  className="c5"
                >
                  <svg
                    className="c8 "
                    height={10}
                    onClick={null}
                    open={false}
                    viewBox="0 0 1024 1024"
                    width={10}
                  >
                    <path
                      d="M961.714 461.714l-424 423.429c-14.286 14.286-37.143 14.286-51.429 0l-424-423.429c-14.286-14.286-14.286-37.714 0-52l94.857-94.286c14.286-14.286 37.143-14.286 51.429 0l303.429 303.429 303.429-303.429c14.286-14.286 37.143-14.286 51.429 0l94.857 94.286c14.286 14.286 14.286 37.714 0 52z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
              <ul
                className="c9"
              >
                <div
                  className="c15"
                >
                  Vero sint molestiae sit consequuntur aut aliquam. Aut porro maiores est rerum sed quasi fugiat culpa fuga. Voluptatem quasi excepturi earum. Repellendus qui deleniti aut blanditiis exercitationem eum dolorem libero debitis.
                </div>
              </ul>
            </li>
          </ul>
        </li>
      </ul>
    </li>
    <li
      className="vital__ListItem c2"
    >
      <div
        className="vital__ListItem-wrapper c16"
        onClick={[Function]}
      >
        <div
          className="vital__ListItem-title c4"
        >
          Level 1
        </div>
        <div
          className="c5"
        >
          <div
            className="c17 c4"
          >
            <span
              className="vital__badge c7"
            >
              10
            </span>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Packages | List Tree/ Accordion 1`] = `
.c10 {
  display: inline-block;
  vertical-align: middle;
  padding: 0.25rem 0.75rem;
  border-radius: 0.75rem;
  font-size: 0.725rem;
  background-color: #00C3FF;
  color: #ffffff;
}

.c1 {
  list-style: none;
  word-break: break-word;
  word-wrap: break-word;
  overflow: hidden;
  border-radius: 4px;
}

.c2 {
  border-radius: 0;
}

.c3 {
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  margin-bottom: -1px;
  padding: 0.75rem 1.3rem;
  font-size: 1.125rem;
  word-break: break-word;
  border: none;
  border-bottom: #D8E3F6;
  border-top: #D8E3F6;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  background: #ffffff;
  color: #456297;
}

.c3:hover {
  background-color: #D8E3F6;
  color: #419FFE;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  display: table-cell;
  vertical-align: middle;
}

.c6 {
  pointer-events: none;
  color: inherit;
  -webkit-transform: rotateZ(0deg);
  -ms-transform: rotateZ(0deg);
  transform: rotateZ(0deg);
  -webkit-transition: -webkit-transform 0.1s ease-in;
  -webkit-transition: transform 0.1s ease-in;
  transition: transform 0.1s ease-in;
  -webkit-transform-origin: center center;
  -ms-transform-origin: center center;
  transform-origin: center center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  will-change: height;
  background-color: #f7f9fd;
  overflow: hidden;
}

.c9 {
  text-align: right;
  padding-right: 20px;
}

.c8 {
  display: block;
  font-size: 1.2rem;
  border-left: none;
  border-right: none;
  padding: 0.928rem 2.856rem 0.928rem 1.428rem;
  line-height: 1.866rem;
}

.c0 {
  padding: 20px;
}

<div
  className="c0"
>
  <ul
    className="vital__list c1"
    icon={null}
  >
    <li
      className="vital__ListItem c2"
    >
      <div
        className="vital__ListItem-wrapper c3"
        onClick={[Function]}
      >
        <div
          className="vital__ListItem-title c4"
        >
          Collaspe 1
        </div>
        <div
          className="c5"
        >
          <svg
            className="c6 "
            height={10}
            onClick={null}
            open={false}
            viewBox="0 0 1024 1024"
            width={10}
          >
            <path
              d="M961.714 461.714l-424 423.429c-14.286 14.286-37.143 14.286-51.429 0l-424-423.429c-14.286-14.286-14.286-37.714 0-52l94.857-94.286c14.286-14.286 37.143-14.286 51.429 0l303.429 303.429 303.429-303.429c14.286-14.286 37.143-14.286 51.429 0l94.857 94.286c14.286 14.286 14.286 37.714 0 52z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <ul
        className="c7"
      >
        <div
          className="c8"
        >
          Quo voluptates numquam nulla libero vel facere quibusdam sunt. Hic sed delectus et ipsum iste. Eos eligendi quibusdam. Possimus quisquam minima velit maxime officia consequatur et magni. Necessitatibus quos sed alias architecto est pariatur. Et vero aperiam quaerat. Ut numquam quaerat et aut neque ratione velit et dolor. Ipsam repellendus saepe quas et iste debitis molestias recusandae ipsum. Praesentium cumque est velit delectus non atque ullam. Non quis voluptate doloribus voluptatum assumenda. Illum est incidunt a eius voluptatum laudantium repellat. Ipsum eos non molestias qui ab quasi pariatur. Ipsum ea perferendis dolorem nihil et dolor. Expedita officia accusantium incidunt illum illum consequuntur velit.
        </div>
      </ul>
    </li>
    <li
      className="vital__ListItem c2"
    >
      <div
        className="vital__ListItem-wrapper c3"
        onClick={[Function]}
      >
        <div
          className="vital__ListItem-title c4"
        >
          Collaspe 2
        </div>
        <div
          className="c5"
        >
          <div
            className="c9 c4"
          >
            <span
              className="vital__badge c10"
            >
              1
            </span>
          </div>
          <svg
            className="c6 "
            height={10}
            onClick={null}
            open={false}
            viewBox="0 0 1024 1024"
            width={10}
          >
            <path
              d="M961.714 461.714l-424 423.429c-14.286 14.286-37.143 14.286-51.429 0l-424-423.429c-14.286-14.286-14.286-37.714 0-52l94.857-94.286c14.286-14.286 37.143-14.286 51.429 0l303.429 303.429 303.429-303.429c14.286-14.286 37.143-14.286 51.429 0l94.857 94.286c14.286 14.286 14.286 37.714 0 52z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <ul
        className="c7"
      >
        <div
          className="c8"
        >
          Nostrum tempora ipsum et in. Numquam praesentium voluptas itaque ratione iste quisquam harum. Voluptatibus sit rerum. Vitae consequatur eaque aliquid porro perspiciatis culpa et sit. Iste illo eum cum. Et ea beatae dolorum tempore possimus iste quia nobis beatae. Aut voluptatibus illo possimus inventore laudantium nobis aperiam. Aut aut vel officiis laborum nihil dolor. Aut velit eligendi at at sed esse inventore. Perspiciatis ipsum debitis in voluptatem error cumque iure earum nostrum. Quo recusandae dolores esse. Ipsam voluptas aut et nisi iste qui minima mollitia alias.
        </div>
      </ul>
    </li>
  </ul>
</div>
`;
